# log_ec

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-unit-tests.yml
src/: log_ec.c  log_ec.h
test/: CMakeLists.txt  console_printf.h  test_runner.c
